force-app/main/default/Objects/Sales_Funnel_Step__c/Sales_Funnel_Step__c.object-meta.xml
<CustomObject>
    <description>Step that is part of a sales funnel.  A step can be sending an email, sending a text or making a call.</description>
    <label>Sales Funnel Step</label>
    <nameField>
        <displayFormat>SF-Step{0000}</displayFormat>
        <label>Sales Funnel Step Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Funnel Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>