force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Automatic__c.field-meta.xml
<CustomField>
    <fullName>Automatic__c</fullName>
    <description>Indicates that the communication should be executed automatically or requires a person to handle that step</description>
    <inlineHelpText>Indicates that the communication should be executed automatically or requires a person to handle that step</inlineHelpText>
    <label>Automatic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>