force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Delay_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Days__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Number of days to delay executing this step in the sales funnel.  Delay is in days and based on the date a person begins the sales funnel</description>
    <inlineHelpText>Number of days to delay executing this step in the sales funnel.</inlineHelpText>
    <label>Delay in Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>