force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Email_Example__c.field-meta.xml
<CustomField>
    <fullName>Email_Example__c</fullName>
    <formula>IMAGE (
  

&quot;https://transition-trails.lightning.force.com/contentbuilder/contentBuilder.app?id=00Xan000007SEqSEAW&amp;retUrl=/00Xan000007SEqSEAW&quot;,&quot;TBD&quot;
)</formula>
    <label>Email Example</label>
    <type>Text</type>
</CustomField>