force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Example__c.field-meta.xml
<CustomField>
    <fullName>Example__c</fullName>
    <description>Example of the email or text for this step</description>
    <inlineHelpText>Example of the email or text for this step</inlineHelpText>
    <label>Example</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>