force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Key_Message__c.field-meta.xml
<CustomField>
    <fullName>Key_Message__c</fullName>
    <description>Primary message we want to convey with this step</description>
    <inlineHelpText>Primary message we want to convey with this step</inlineHelpText>
    <label>Key Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>