force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Defines the step number or order of the step within the sales funnel</description>
    <inlineHelpText>Defines the step number or order of the step within the sales funnel</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>