force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>What this step is supposed to do</description>
    <inlineHelpText>What this step is supposed to do</inlineHelpText>
    <label>Purpose</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>