force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Sales_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel__c</fullName>
    <description>The sales funnel to which the step belongs</description>
    <inlineHelpText>The sales funnel to which the step belongs</inlineHelpText>
    <label>Sales Funnel</label>
    <referenceTo>Sales_Funnel__c</referenceTo>
    <relationshipLabel>Sales Funnel Steps</relationshipLabel>
    <relationshipName>Sales_Funnel_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>