force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>Unique identifier for a template to use when sending an email or text</description>
    <inlineHelpText>Unique identifier for a template to use when sending an email or text</inlineHelpText>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>