force-app/main/default/Objects/Sales_Funnel_Step__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short description or name by which step can be referenced</description>
    <inlineHelpText>Short description or name by which step can be referenced</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>