force-app/main/default/Objects/Sales_Funnel_Step__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General step</description>
    <label>General</label>
</RecordType>